--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hogwarts</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <%= yield %>
